# domain-django

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  compose.yml  fly.toml  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: add-data.sh  clear-data.sh
mysite/: settings.py  urls.py  wsgi.py
mysite/settings/: __init__.py  production.py
polls/: admin.py  apps.py  auth.py  models.py  views.py
polls/domain/: questions.py
polls/infrastructure/: questions.py
polls/migrations/: 0001_initial.py  0002_choiceentity.py  0003_choiceentity_votes.py
polls/templates/polls/: base.html  details.html  index.html  results.html
polls/views/: index.py  question_api.py  question_details.py  question_results.py
tests/e2e/: client.py  conftest.py  pages.py  test_index.py  test_polls.py  test_question_details.py
tests/polls/: conftest.py  fakes.py  pages.py  test_views.py
tests/polls/unit/domain/: test_questions.py
tests/polls/unit/infrastructure/: questions.py  test_questions.py
tests/polls/unit/views/: test_index.py  test_question_api.py  test_question_details.py  test_question_results.py  test_views.py
tests/polls/views/: conftest.py  fakes.py  pages.py  test_index.py  test_question_details.py  test_question_results.py  test_questions_api.py
