[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "django-minimal"
version = "0.1.0"
authors = [
    {name = "Alex Coleman", email = "alexjcoleman@gmail.com"},
]
description = "Minimal django project"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "Django",
    "dj-database-url",
    "gunicorn",
    "inject",
    "psycopg[binary]",
    "python-dotenv"
]

[project.optional-dependencies]
dev = [
    "beautifulsoup4",
    "black",
    "django-stubs",
    "mypy",
    "pytest",
    "pytest-django",
    "pytest-playwright",
    "playwright",
    "requests",
    "ruff",
    "types-beautifulsoup4",
    "types-requests",
]

[tool.flit.module]
name = "mysite"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "mysite.settings"
addopts = "--screenshot only-on-failure"

[tool.mypy]
strict = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "mysite.settings"

[tool.ruff.lint]
ignore = [
    "F403",
    "F405"
]
